4pics1word/static/css/game_attempt.css
body {
    background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
    min-height: 100vh;
}

/* Set up for particles.js */
#particles-js {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}

label svg {
    cursor: pointer;
    padding: 10px;
}

input[type="file"] {
    display: none;
}

#word-input{   
    font-family: monospace;
    font-size: 36px;
    letter-spacing: 13px;
    display: inline-block;
}

#word-input::after {
    content: '';
    height: 3px; /* Adjust line thickness as needed */
    background-color: black; /* Adjust line color as needed */
}

#underline-container {
    border-bottom: 3px solid black; /* Underline effect */
}

.images-content {
    margin-top: 90px;
}

.image-cell {
    /* width: 180px;
    height: 180px; */
    aspect-ratio: 1; /* Ensure the aspect ratio of each cell is 1:1 */
    min-width: 180px;
    max-width: 240px;
    padding: 8px;
}

.change-img-icon {
    position: absolute;
    top: 2px;
    left: 2px;
    cursor: pointer;
}

.images-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.content-container {
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
    background-color: rgba(255, 255, 255, 0.9);
    border-radius: 10px;
}

.word-enter-title {
    color: black !important;
}

.word-container input {
    color: black !important;
    border-color: black !important;
    border-radius: 7px;
}

label {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.text {
    color: white;
}

.image-cell img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 6px;
}

.play-button {
    background-color: transparent;
    background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
    background-size: 0% 100%;
    background-position: left center;
    transition: background-size 0.3s ease-out, color 0.3s ease;
    background-repeat: no-repeat;
    color: rgb(169, 143, 255);
    height: 70px;
    line-height: 50px;
    font-weight: 700;
    border-radius: 20px;
    border: 2px solid rgb(169, 143, 255);

}

.play-button:hover {
    background-color: transparent;
    background-size: 100% 100%;
    color: #FFF;
    border: 2px solid rgb(169, 143, 255);
}

